<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Water Consumption</string>    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Citire">Reading</string>
    <string name="TabelConsum">Consumption Table</string>
    <string name="Setari">Settings</string>
    <string name="title_activity_fragment__citire">Reading</string>
    <string name="title_activity_fragment__tabel_consum">ConsumptionTable</string>
    <string name="title_activity_fragment__setari">Settings</string>
    <string name="title_activity_citire">Reading</string>
    <string name="title_activity_tabel">Tabel</string>
    <string name="title_activity_setari">Settings</string>
    <string name="Adauga">Add</string>
    <string name="Sterge">Remove</string>
    <string name="Editeaza">Edit</string>
    <string name="Camera">Room</string>
    <string name="title_activity_setari_camera">RoomSettings</string>
    <string name="title_activity_setari_persoana">PersonSettingActivity</string>
    <string name="title_activity_setari_fragment">SettingsFragmentActivity</string>
    <string name="data">Date</string>
    
    
    <string name="Calda">Hot</string>
    <string name="Rece">Cold</string>
    <string name="DataZiLunaAn">Date (day-month-year):</string>
    <string name="Modifica">Modify</string>
    <string name="Salvare">Save</string>
    <string name="CitireTab">READ</string>
    <string name="ConsumTab">LOG</string>
    <string name="GraficTab">CHART</string>
    <string name="SetariTab">SETTINGS</string>
    <string name="Camere">Rooms</string>
    <string name="Persoana">Person</string>
    <string name="Nume">Name</string>
    <string name="Bloc">Building number</string>
    <string name="Scara">Entrance number</string>
    <string name="Etaj">Floor</string>
    <string name="Apartament">Apartment</string>
    <string name="NrPersoane">Person No.</string>
    <string name="Email">Email</string>
    <string name="Total">Total</string>
    <string name="Consum">Consumption</string>
    <string name="Ian">Jan</string>
    <string name="Feb">Feb</string>
    <string name="Mar">Mar</string>
    <string name="Apr">Apr</string>
    <string name="Mai">May</string>
    <string name="Iun">Jun</string>
    <string name="Iul">Jul</string>
    <string name="Aug">Aug</string>
    <string name="Sep">Sep</string>
    <string name="Oct">Oct</string>
    <string name="Nov">Nov</string>
    <string name="Dec">Dec</string>
    <string name="Ianuarie">JANUARY</string>
    <string name="Februarie">FEBRUARY</string>
    <string name="Martie">MARCH</string>
    <string name="Aprilie">APRIL</string>
    <string name="Maii">MAY</string>
    <string name="Iunie">JUNE</string>
    <string name="Iulie">JULY</string>
    <string name="August">AUGUST</string>
    <string name="Septembrie">SEPTEMBER</string>
    <string name="Octombrie">OCTOBER</string>
    <string name="Noiembrie">NOVEMBER</string>
    <string name="Decembrie">DECEMBER</string>
    <string name="Despre">About</string>
    <string name="DezvoltataDe">Developed by:</string>
    <string name="E_mail">E-mail:</string>
    <string name="Telefon">Phone:</string>
    <string name="EditConsum">Edit consumption</string>
    <string name="Editare">Edit</string>
    <string name="Export_PDF">Export PDF</string>    
    <string name="StergetiCamera">Remove room</string>
    <string name="Da">Yes</string>
    <string name="Nu">No</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Fisierul_a_fost_salvat_pe_cardul_de_memorie_in_directorul">The file has been saved on the memory card in the folder</string>
    <string name="Nu_exista_date_pe_luna_precedenta">No data available for the previous month</string>  
    <string name="Nu_e_instalata_nici_o_aplicatie_pentru_a_vedea_fisierul_PDF">There is no PDF viewer installed</string>
    <string name="Nu_se_poate_accesa_cardul_de_memorie">Memory card could not be accessed</string>
    <string name="Consum_contorizat_in_apartament_pe_luna">Apartment water consumption</string>
    <string name="An">year</string>
    <string name="Data_citirii">Date of reading</string>
    <string name="Semnatura">Signature</string>
    <string name="Apa_rece">Cold water</string>
    <string name="Apa_calda">Hot water</string>
    <string name="Index_nou">New index</string>
    <string name="Index_vechi">Old index</string>
    <string name="CitireApometre">WaterConsumption</string>
    <string name="Bucatarie">Kitchen</string>
    <string name="Baie">Bathroom</string>
    <string name="Trebuie_completate_minim_3_luni_cu_date_despre_consum_pentru_a_putea_desena_graficul">
        You must fill at least 3 months of data for the chart to be drawn
    </string>
    <string name="Limba">Language</string>
    <string name="Consumul_a_fost_salvat">The consumption data has been saved</string>
    <string name="Salvare_efectuata">Saved</string>
    <string name="Backup">Backup data</string>
    <string name="Restore">Restore data</string>
    <string name="Restaurare_efectuata">Restore done</string>
    <string name="Backup_efectuat_la">Backup done at: </string>
    <string name="Mesaj_upgrade">More features in the Pro version. Click here</string>
    <string name="Info_permisiuni">The application needs access to the memory card to save the data.</string>
</resources>
