<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#2F555555">
        <TextView 
            android:id="@+id/lblCameraHeader"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/Camera"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"/>    
           
        <TextView 
            android:id="@+id/lblCaldaHeader"
            android:layout_height="wrap_content" 
            android:layout_width="70dp" 
            android:text="@string/Calda"       
            android:textColor="#FF0000"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView 
            android:id="@+id/lblReceHeader"
            android:layout_height="wrap_content"
            android:layout_width="70dp" 
            android:text="@string/Rece"       
            android:textColor="#0000FF"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>
   <ListView
       android:id="@+id/listCitire"
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       android:text="@string/hello_world"
       />

   <LinearLayout 
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingBottom="15dp">
       <LinearLayout 
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:layout_weight="1">       
       <TextView
           android:id="@+id/lblDataCurenta"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/DataZiLunaAn"
           android:textSize="20sp"
           android:layout_marginLeft="10dp"/>
       <TextView 
           android:id="@+id/lblDataSetata"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:textSize="20sp"
           android:textStyle="bold"
           android:layout_marginLeft="10dp"/>
       </LinearLayout>
      <!-- <Button 
           android:id="@+id/btnModificaData"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/Modifica"
           android:background="@drawable/btn_selection_general"/> --> 
           <ImageButton android:id="@+id/btnModificaData"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:padding="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="Edit"        
        android:src="@drawable/edit"
        android:layout_gravity="right"/>
       
   </LinearLayout>
   <Button 
       android:id="@+id/btnSaveCitire"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:layout_marginBottom="10dp"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:text="@string/Salvare"
       android:background="@drawable/btn_selection_general_material_design"/>

</LinearLayout>
