<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
<LinearLayout
        android:id="@+id/layoutTabs"
        android:layout_width="fill_parent"        
        android:layout_height="50dp" 
        android:orientation="horizontal"
        android:visibility="visible">
    <Button android:id="@+id/btnCamere"
        android:layout_width="0dp"
        android:layout_weight="1"        
        android:layout_height="wrap_content"        
        android:background="@drawable/tab_selection_material_design"
        android:textSize="16sp"
        android:text="@string/Camere"
        />
    <Button android:id="@+id/btnPersoana"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/Persoana"        
        android:textSize="16sp"
        android:background="@drawable/tab_selection_material_design"
        />
</LinearLayout>
     <LinearLayout
        android:id="@+id/layoutCamere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:visibility="visible">
		    <LinearLayout
		        android:id="@+id/group"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal">
		                
				<EditText android:id="@+id/txtNumeCamera"		     
		        	 android:layout_weight="1"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"  
		        android:textSize="20sp"      
		        android:hint="@string/Camera" />      	 		    
				
		        <ImageButton
		            android:id="@+id/add"
		            android:layout_width="50dp"            
		            android:layout_height="50dp"
        			android:scaleType="fitCenter"
        			android:padding="10dp"
        			        			
		            android:background="@android:color/transparent"
		            android:contentDescription="Add"
		            android:src="@drawable/add"/>      
		        
		    </LinearLayout>
		
		    <ListView
		        android:id="@+id/listSetari"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/hello_world" />
	</LinearLayout>
	
     <ScrollView android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:id="@+id/layoutPersoana"
         android:visibility="gone">
     <LinearLayout 
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"         
         android:orientation="vertical"
         android:layout_marginLeft="10dp">       
     
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
             <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/Nume"/>

             <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>   
    <EditText
        android:id="@+id/txtNume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:ems="10"/>
         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/Bloc" />
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
             <EditText
        android:id="@+id/txtBloc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:ems="10" >        
    </EditText>    
         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"      
        android:text="@string/Scara"
         />
<View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtScara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:ems="10" />
         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/Etaj"
         />
    <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
             <EditText
        android:id="@+id/txtEtaj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:ems="10" />

    
         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/Apartament" />
<View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtApartament"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:ems="10" />
         </LinearLayout>
         
        
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/NrPersoane"
        />
<View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <EditText
        android:id="@+id/txtNrPersoane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:ems="10"
        android:inputType="number" />
         </LinearLayout>
         <LinearLayout android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"       
        android:text="@string/Email" />
             <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
             <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:ems="10"
        android:inputType="textEmailAddress" />
         </LinearLayout>
         
         <LinearLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center">
            
             <Button
        android:id="@+id/btnSave"
        android:layout_width="100dp"
        android:layout_height="wrap_content"  
        android:background="@drawable/btn_selection_general_material_design"      
        android:text="@string/Salvare"
        />
         </LinearLayout>    

</LinearLayout>
</ScrollView>
</LinearLayout> 
