<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
        <Button android:id="@+id/btnCitire"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selection_material_design"
            android:text="@string/CitireTab"
            android:textSize="14sp"
            android:textStyle="bold"
            android:onClick="btnCitireClick"/>
        <Button android:id="@+id/btnConsum"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selection_material_design"
            android:text="@string/ConsumTab"
            android:textSize="14sp"
            android:textStyle="bold"
            android:onClick="btnConsumClick"/>
        <Button android:id="@+id/btnGrafic"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selection_material_design"
            android:text="@string/GraficTab"
            android:textSize="14sp"
            android:textStyle="bold"
            android:onClick="btnGraficClick"/>
        <Button android:id="@+id/btnSetari"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/tab_selection_material_design"
            android:text="@string/SetariTab"
            android:textSize="14sp"
            android:textStyle="bold"
            android:onClick="btnSetariClick"/>  
        
    </LinearLayout>
    <Button android:id="@+id/btnUpgrade"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@color/colorAccent"
            android:textAllCaps="false"
            android:text="@string/Mesaj_upgrade"
            android:textSize="14sp"></Button>

 <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_gravity="bottom" />

</LinearLayout>

<!-- 
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
 
    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TabWidget
                        android:id="@android:id/tabs"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:orientation="horizontal" >
                    </TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="0" />

<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
             
    
    
                    <android.support.v4.view.ViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_weight="1"
                        android:layout_gravity="bottom" />
                    
                    
               </LinearLayout>

                    

            </LinearLayout>  
    </TabHost>

</RelativeLayout>

 -->